hphp/test/quick/function_pointer/class_const_dollar_dollar.php.expectf
Fatal error: Function pointers must be explicitly specified in %s/test/quick/function_pointer/class_const_dollar_dollar.php on line 10
